tests/baselines/reference/subtypingWithObjectMembersAccessibility.errors.txt
subtypingWithObjectMembersAccessibility.ts(4,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypingWithObjectMembersAccessibility.ts(8,5): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
subtypingWithObjectMembersAccessibility.ts(12,12): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypingWithObjectMembersAccessibility.ts(15,7): error TS2415: Class 'B' incorrectly extends base class 'A'.
  Property 'foo' is private in type 'B' but not in type 'A'.
subtypingWithObjectMembersAccessibility.ts(16,13): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
subtypingWithObjectMembersAccessibility.ts(23,7): error TS2415: Class 'B2' incorrectly extends base class 'A2'.
  Property '1' is private in type 'B2' but not in type 'A2'.
subtypingWithObjectMembersAccessibility.ts(31,7): error TS2415: Class 'B3' incorrectly extends base class 'A3'.
  Property ''1'' is private in type 'B3' but not in type 'A3'.


==== subtypingWithObjectMembersAccessibility.ts (7 errors) ====
    // Derived member is private, base member is not causes errors
    
    class Base {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Derived extends Base {
        bar: string;
        ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    }
    
    class A {
        public foo: Base;
               ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B extends A {
          ~
!!! error TS2415: Class 'B' incorrectly extends base class 'A'.
!!! error TS2415:   Property 'foo' is private in type 'B' but not in type 'A'.
        private foo: Derived; // error
                ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class A2 {
        public 1: Base; 
    }
    
    class B2 extends A2 {
          ~~
!!! error TS2415: Class 'B2' incorrectly extends base class 'A2'.
!!! error TS2415:   Property '1' is private in type 'B2' but not in type 'A2'.
        private 1: Derived; // error
    }
    
    class A3 {
        public '1': Base;
    }
    
    class B3 extends A3 {
          ~~
!!! error TS2415: Class 'B3' incorrectly extends base class 'A3'.
!!! error TS2415:   Property ''1'' is private in type 'B3' but not in type 'A3'.
        private '1': Derived; // error
    }